# rusty_crab_api

./: README.md
rusty_crab_api/: Cargo.toml
rusty_crab_api/src/: api_doc.rs  db.rs  main.rs
rusty_crab_api/src/entity/: employees.rs  mod.rs  prelude.rs  user.rs
rusty_crab_api/src/handlers/: user.rs
